# secure-disk-manager-pro

Secure_DiskManager_Pro/: CMakeLists.txt
for_use/secure_diskmanager_ops_rust/: Cargo.toml  FUNCTION_MAP.md  README.md
for_use/secure_diskmanager_ops_rust/examples/: demo.rs
for_use/secure_diskmanager_ops_rust/src/: dpapi.rs  encryption.rs  entropy.rs  identity.rs  lib.rs  main.rs  payload_dispatcher.rs  process_services.rs  search.rs
secure_diskmanager_ops_rust/: BUILD_WINDOWS.md  Cargo.toml  FUNCTION_MAP.md  PYTHON_DEMO_FUNCTION_MAP.md  README.md  USER_MANUAL.md  build_windows.ps1  test.key
secure_diskmanager_ops_rust/examples/: demo.rs  python_ops_demo.rs
secure_diskmanager_ops_rust/src/: cli.rs  compression.rs  disk_management.rs  error.rs  file_transfer.rs  fs_monitor.rs  ghost_controller.rs  gpg_wrapper.rs  key_manager.rs  lib.rs  main.rs  net_admin.rs  python_ops.rs  quantum.rs  rng.rs  secure_deletion.rs  stealth_mailer.rs  system_monitor.rs
