[package]
name = "secure_diskmanager_ops"
version = "0.2.0"
edition = "2021"
description = "Safe Rust equivalents for Secure_DiskManager_Pro C++ OS utilities plus std-only Rust ports of selected Python library demos."
license = "MIT OR Apache-2.0"

[features]
default = []
# This crate deliberately keeps stealth, covert exfiltration, MAC spoofing,
# kill-switch, and self-delete routines blocked even when features are enabled.
# These feature names are reserved for future strictly-local admin workflows.
dangerous-destructive = []
dangerous-identity = []
dangerous-net = []

[dependencies]
flate2 = "1"
getrandom = "0.2"
regex = "1"
walkdir = "2"


[[bin]]
name = "secure_diskmanager_ops"
path = "src/main.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "python_ops_demo"
path = "examples/python_ops_demo.rs"
